新增一些知识点